# my_new_dog

./: CMakeLists.txt  CMakePresets.json
model/binglian/: dog.xml  my.xml
model/go2/: go2.xml
model/new_dog/meshes/: base_link.STL  leg1_link3.STL  leg1_link4.STL  leg2_link3.STL  leg2_link4.STL  leg3_link3.STL  leg3_link4.STL  leg4_link3.STL  leg4_link4.STL  mjmodel.xml  mjmodel_new.xml  new_dog.urdf  scene.xml
my_lib/: CMakeLists.txt
my_lib/include/: BasicEKF.h  ConvexMpc.h  CtrlStates.h  RobotControl.h  Utils.h  base_struct.h  filter.h  mid_data.h  my_usb.h  pid.h
my_lib/src/: BasicEKF.cpp  ConvexMpc.cpp  RobotControl.cpp  Utils.cpp  my_usb.cpp  pid.cpp
my_lib_sim/: CMakeLists.txt
my_lib_sim/include/: calc_dyn.h
my_lib_sim/src/: calc_dyn.cpp
my_wbc/: CMakeLists.txt
my_wbc/include/: priority_tasks.h  wbc_priority.h
my_wbc/src/: priority_tasks.cpp  wbc_priority.cpp
sim_interface/: CMakeLists.txt
sim_interface/include/: GLFW_callbacks.h  MJ_interface.h
sim_interface/src/: GLFW_callbacks.cpp  MJ_interface.cpp
user/: CMakeLists.txt
user/hardware/: CMakeLists.txt
user/hardware/include/: dog.h
user/hardware/src/: dog_hardware.cpp
user/pin_text/: CMakeLists.txt
user/pin_text/include/: pin.h
user/pin_text/src/: pin.cpp
user/sim/: CMakeLists.txt
user/sim/include/: dog_sim.h
user/sim/src/: dog_sim.cpp  dog_sim_process.cpp  dog_sim_wbc.cpp
